--- a/hub.html
+++ b/hub.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitch Stream & Events</title>
+    <title>Sportwave Hub</title>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&display=swap" rel="stylesheet">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -14,99 +16,93 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
-            background-image: url('https://i.ibb.co/S4WYbtn6/image.png');
-            background-size: cover;
-            background-position: center;
-            color: #fff;
-            text-align: center;
+            font-family: 'League Spartan', sans-serif;
+            background: #1b1b1b url('https://i.ibb.co/S4WYbtn6/image.png') no-repeat center center/cover;
+            color: white;
+            transition: background 1s ease;
             overflow-x: hidden;
-            padding: 0;
-            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            min-height: 100vh;
+            padding-top: 20px; /* To prevent cutting off */
         }
 
         .container {
+            width: 90%;
             max-width: 1200px;
-            margin: auto;
-            padding: 30px;
+            margin: 0 auto;
+            text-align: center;
         }
 
         h1 {
-            font-family: 'League Spartan', sans-serif;
-            font-size: 4rem;
-            margin-bottom: 15px;
-            color: #FF6F61;
+            font-size: 3rem;
+            color: #FF6F61; /* Default color */
+            margin-bottom: 20px;
         }
 
         h2 {
             font-size: 2.2rem;
-            margin-top: 40px;
-            color: #FF6F61;
-            font-weight: 600;
-        }
-
-        #twitch-embed {
-            margin-top: 20px;
-            width: 100%;
-            height: 500px;
-            border-radius: 15px;
-        }
-
-        .carousel-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            margin-top: 50px;
+            margin: 40px 0 20px;
+            color: #FF6F61; /* Default color */
         }
 
         .carousel {
             display: flex;
             overflow: hidden;
-            width: 100%;
-            justify-content: flex-start;
-            gap: 20px;
+            position: relative;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .carousel-inner {
+            display: flex;
+            transition: transform 0.5s ease;
+            justify-content: center;
         }
 
         .event {
-            background-color: #2c2c2c;
-            border-radius: 12px;
-            width: 270px; /* Adjusted width */
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
-            cursor: pointer;
+            flex: 0 0 25%; /* Adjusted to fit 4 events at a time */
+            padding: 10px;
+            box-sizing: border-box;
+            margin: 0 10px;
         }
 
-        .event:hover {
+        .event-card {
+            background-color: #2c2c2c;
+            border-radius: 12px;
+            overflow: hidden;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+        }
+
+        .event-card:hover {
             transform: scale(1.05);
             box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
         }
 
-        .event img {
+        .event-card img {
             width: 100%;
             height: 180px;
             object-fit: cover;
-            border-radius: 12px 12px 0 0;
         }
 
         .event-info {
             padding: 15px;
-            background-color: #383838;
-            border-radius: 0 0 12px 12px;
+            background: #383838;
         }
 
         .event-info h3 {
-            color: #FF6F61;
             font-size: 1.6rem;
-            margin-bottom: 10px;
+            color: #FF6F61;
         }
 
         .event-info p {
+            margin: 5px 0;
             font-size: 1.1rem;
             color: #e1e1e1;
-            margin-bottom: 10px;
         }
 
-        .event-info .location {
+        .location {
             font-size: 0.9rem;
             color: #aaa;
         }
@@ -114,17 +110,14 @@
         .countdown {
             font-weight: 600;
             color: #FF6F61;
-            font-size: 1.2rem;
+            margin-top: 10px;
         }
 
         .arrow {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            color: #fff;
-            padding: 10px;
-            border-radius: 50%;
+            font-size: 3rem;
             cursor: pointer;
             z-index: 10;
         }
@@ -138,22 +131,14 @@
         }
 
         @media (max-width: 768px) {
-            .container {
-                padding: 15px;
-            }
-
             .event {
-                width: 100%;
-                max-width: 400px;
-                margin-bottom: 20px;
-            }
-
-            #twitch-embed {
-                height: 350px;
+                flex: 0 0 100%;
             }
         }
+
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Sportwave Hub</h1>
@@ -161,20 +146,17 @@
         <div id="twitch-embed"></div>
 
         <h2>Upcoming Events</h2>
-
-        <div class="carousel-container">
-            <div class="arrow arrow-left" onclick="moveCarousel('left')">❮</div>
-            <div class="carousel" id="events-container">
-                <!-- Events will load here -->
-            </div>
-            <div class="arrow arrow-right" onclick="moveCarousel('right')">❯</div>
+        <div class="carousel" id="carousel">
+            <div class="arrow arrow-left" onclick="prevSlide()">&#8249;</div>
+            <div class="carousel-inner" id="events-container"></div>
+            <div class="arrow arrow-right" onclick="nextSlide()">&#8250;</div>
         </div>
     </div>
 
     <script>
         new Twitch.Embed("twitch-embed", {
-            width: "100%",
-            height: "100%",
+            width: "1140",
+            height: "500",
             channel: "sportwavelive",
             layout: "video",
             autoplay: true,
@@ -184,6 +166,8 @@
         const SHEET_ID = '1l0Tn9g9cXmQo8-xKOTnMNb_aJ-s9QOJbSrghOyRlvJA';
         const SHEET_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:csv`;
 
+        let slideIndex = 0;
+
         async function loadEvents() {
             try {
                 const response = await fetch(SHEET_URL);
@@ -192,92 +176,131 @@
                 const rows = csvText.trim().split('\n').slice(1);
                 const events = rows.map(row => {
                     const columns = row.split(',').map(item => item.replace(/^"|"$/g, ''));
-                    const [id, title, date, time, location, thumbnail] = columns;
-                    return { id, title, date: formatDate(date), time, location, thumbnail };
+                    const [id, title, date, time, location, thumbnail, background, h1Color, h2Color] = columns;
+                    return { id, title, date, time, location, thumbnail, background: background || '', h1Color: h1Color || '', h2Color: h2Color || '' };
                 });
 
-                // Sort events to have the future events first
-                const sortedEvents = events.sort((a, b) => new Date(`${a.date} ${a.time}`) - new Date(`${b.date} ${b.time}`));
+                // Separate upcoming and finished events
+                const now = new Date().getTime();
+                const upcomingEvents = events.filter(event => {
+                    const eventDate = new Date(`${event.date.split('/').reverse().join('-')}T${event.time}:00`).getTime();
+                    return eventDate > now;
+                });
+
+                const finishedEvents = events.filter(event => {
+                    const eventDate = new Date(`${event.date.split('/').reverse().join('-')}T${event.time}:00`).getTime();
+                    return eventDate <= now;
+                });
+
+                // Sort the upcoming events (ascending by date)
+                upcomingEvents.sort((a, b) => {
+                    const dateA = new Date(`${a.date.split('/').reverse().join('-')}T${a.time}:00`).getTime();
+                    const dateB = new Date(`${b.date.split('/').reverse().join('-')}T${b.time}:00`).getTime();
+                    return dateA - dateB;
+                });
+
+                // Finished events should be displayed last, but still sorted by date
+                finishedEvents.sort((a, b) => {
+                    const dateA = new Date(`${a.date.split('/').reverse().join('-')}T${a.time}:00`).getTime();
+                    const dateB = new Date(`${b.date.split('/').reverse().join('-')}T${b.time}:00`).getTime();
+                    return dateA - dateB;
+                });
+
+                // Combine the events: first upcoming, then finished
+                const allEvents = [...upcomingEvents, ...finishedEvents];
 
                 const container = document.getElementById('events-container');
                 container.innerHTML = '';
 
-                sortedEvents.forEach(event => {
+                allEvents.forEach(event => {
                     const eventElement = document.createElement('div');
                     eventElement.className = 'event';
                     eventElement.innerHTML = `
-                        <img src="${event.thumbnail}" alt="${event.title}">
-                        <div class="event-info">
-                            <h3>${event.title}</h3>
-                            <p>${event.date} at ${event.time}</p>
-                            <p class="location">${event.location}</p>
-                            <div class="countdown" id="countdown-${event.id}">Loading...</div>
-                        </div>
-                    `;
+                        <div class="event-card">
+                            <img src="${event.thumbnail}" alt="${event.title}">
+                            <div class="event-info">
+                                <h3>${event.title}</h3>
+                                <p>${event.date} at ${event.time}</p>
+                                <p class="location">${event.location}</p>
+                                <div class="countdown" id="countdown-${event.id}">Loading...</div>
+                            </div>
+                        </div>`;
                     container.appendChild(eventElement);
-
-                    startCountdown(event.date, event.time, `countdown-${event.id}`);
+                    startCountdown(event.date, event.time, event.background, event.h1Color, event.h2Color, `countdown-${event.id}`);
                 });
+
+                // Set carousel to start at the first event
+                slideIndex = 0;
+                updateSlide();
+
             } catch (error) {
                 console.error('Error loading events:', error);
             }
         }
 
-        function formatDate(dateString) {
-            const [day, month, year] = dateString.split('/');
-            return `${day}/${month}/${year}`;
+        function startCountdown(eventDate, eventTime, backgroundImage, h1Color, h2Color, elementId) {
+            const [day, month, year] = eventDate.split('/');
+            const [hour, minute] = eventTime.split(':');
+            const targetDate = new Date(`${year}-${month}-${day}T${hour}:${minute}:00`).getTime();
+            const oneHourAfter = targetDate + (60 * 60 * 1000);
+            const oneHourBefore = targetDate - (60 * 60 * 1000);
+
+            function updateTimer() {
+                const now = new Date().getTime();
+
+                // Change background 1 hour before event
+                if (now >= oneHourBefore && now < targetDate) {
+                    document.body.style.backgroundImage = `url(${backgroundImage})`;
+                } else if (now >= targetDate && now < oneHourAfter) {
+                    document.body.style.backgroundImage = 'url(https://i.ibb.co/S4WYbtn6/image.png)';
+                }
+
+                // Change colors of h1 and h2 1 hour before the event
+                if (now >= oneHourBefore && now < targetDate) {
+                    document.querySelector('h1').style.color = h1Color || '#FF6F61';  // Default color if empty
+                    document.querySelector('h2').style.color = h2Color || '#FF6F61';  // Default color if empty
+                } else if (now >= targetDate && now < oneHourAfter) {
+                    document.querySelector('h1').style.color = '#FF6F61'; // Reset to default color
+                    document.querySelector('h2').style.color = '#FF6F61'; // Reset to default color
+                }
+
+                const timeRemaining = targetDate - now;
+                if (now >= oneHourAfter) {
+                    document.getElementById(elementId).textContent = 'Finished';
+                } else if (timeRemaining <= 0) {
+                    document.getElementById(elementId).textContent = 'LIVE NOW!';
+                } else {
+                    const hours = Math.floor(timeRemaining / (1000 * 60 * 60));
+                    const minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
+                    document.getElementById(elementId).textContent = `${hours}h ${minutes}m`;
+                }
+            }
+
+            updateTimer();
+            setInterval(updateTimer, 1000);
         }
 
-function startCountdown(eventDate, eventTime, elementId) {
-        const [day, month, year] = eventDate.split('/');
-        const [hour, minute] = eventTime.split(':');
-        const targetDate = new Date(`${year}-${month}-${day}T${hour}:${minute}:00`).getTime();
-        const endDate = targetDate + (1 * 60 * 60 * 1000);  // 1 hour after the event time (adjusted)
-
-        function updateTimer() {
-            const now = new Date().getTime();
-            const timeLeft = targetDate - now;
-            const timePassed = now - endDate;
-
-            if (timePassed > 0) {
-                document.getElementById(elementId).textContent = 'Finished';
-                return;
+        function nextSlide() { 
+            if (slideIndex < document.querySelectorAll('.event').length - 4) {
+                slideIndex++;
+                updateSlide();
             }
-
-            if (timeLeft <= 0) {
-                document.getElementById(elementId).textContent = 'LIVE NOW!';
-                return;
-            }
-
-            const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
-
-            document.getElementById(elementId).textContent = `${days}d ${hours}h ${minutes}m ${seconds}s`;
         }
 
-        updateTimer();
-        setInterval(updateTimer, 1000);
-    }
-
-        let currentIndex = 0;
-
-        function moveCarousel(direction) {
-            const carousel = document.getElementById('events-container');
-            const eventWidth = document.querySelector('.event').offsetWidth + 20; // Including margins
-            const totalEvents = document.querySelectorAll('.event').length;
-
-            if (direction === 'left' && currentIndex > 0) {
-                currentIndex--;
-            } else if (direction === 'right' && currentIndex < totalEvents - 4) {
-                currentIndex++;
+        function prevSlide() { 
+            if (slideIndex > 0) {
+                slideIndex--;
+                updateSlide();
             }
+        }
 
-            carousel.style.transform = `translateX(-${currentIndex * eventWidth}px)`;
+        function updateSlide() {
+            const carouselInner = document.querySelector('.carousel-inner');
+            carouselInner.style.transform = `translateX(-${slideIndex * 25}%)`; /* Adjusted for 4 events */
         }
 
         loadEvents();
     </script>
 </body>
+
 </html>
