--- a/hub.html
+++ b/hub.html
@@ -129,6 +129,7 @@
             <button class="channel-button" onclick="changeChannel('sportwavelive')">Sportwave Live</button>
             <button class="channel-button" onclick="changeChannel('sportwave2')">Sportwave 2</button>
             <button class="channel-button" onclick="changeChannel('sportwavespotlight')">Sportwave Spotlight</button>
+            <button class="channel-button" onclick="changeChannel('sportwavextra')">Sportwave Xtra</button>
         </div>
 
         <h2>Upcoming Events</h2>
