--- a/radio.html
+++ b/radio.html
@@ -26,9 +26,10 @@
 <body>
     <h1>Welcome to Sportwave Radio</h1>
     <div class="player-container">
-        <iframe src="//myradiostream.com/embed/free.php?s=RD&amp;btnstyle=circle-o&amp;stats=true&amp;id=605150&amp;n=28&amp;p=29736" 
-                name="ahR4fJezCV49" frameborder="0" scrolling="no" 
-                style="width:320px;height:50px;border:0;margin:0;overflow:hidden;border-radius:2px;"></iframe>
+        <audio controls>
+            <source src="http://94.72.109.155:29736/" type="audio/mpeg">
+            Your browser does not support the audio tag.
+        </audio>
     </div>
 </body>
 </html>
